# reformat_app

./: .gitignore  CHANGELOG.txt  LICENSE.txt  Pipfile  README.md  app.py  config.yaml  exception.py  func.py  function.py  log.py  logging_config.yaml  main.py  mapping.py  method.py  module.py  module_adm.py  module_bos.py  module_cum.py  module_doc.py  module_ica.py  module_iic.py  module_lds.py  module_lmt.py  module_moc.py  pyproject.toml  requirements.txt  setup.py  verify.py  weekly_script.bat
CONFIG/: config.yaml  logging_config.yaml
RAW/: ADM.txt  BOS.xlsx  CUM.xls  DocImage.txt  ICAS-NCR.xlsx  IIC.xlsx  LDS-P_UserDetail.TXT  Lead-Management.xlsx  MOC.xlsx
TEMPLATE/: Application Data Requirements.xlsx  Param Requirements.xlsx
reformat_app/: app.py  exception.py  function.py  logging_config.yaml  main.py  module.py  module_adm.py  module_bos.py  module_cum.py  module_doc.py  module_ica.py  module_iic.py  module_lds.py  module_lmt.py  module_moc.py  requirements.txt  setup.py
src/: app.py  function.py  main.py  module.py  module_adm.py  module_bos.py  module_cum.py  module_doc.py  module_ica.py  module_lmt.py  module_moc.py  setup.py
template/: template_user.xlsx
uob-app/: app.py  config.yaml  function.py  main.py  module.py  module_adm.py  module_bos.py  module_doc.py  module_ica.py  module_lds.py  module_lmt.py  module_moc.py  setup.py
uob_reformat/: app.py  app.py.bkp  exception.py  function.py  functional.py  main.py  module.py  module_adm.py  module_bos.py  module_bos_bkp.py  module_cum.py  module_dil.py  module_doc.py  module_ica.py  module_iic.py  (+7 more)
(+269 files in other folders)
